--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
-	"name": "erp-robusto",
-	"private": true,
-	"version": "1.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"preview": "vite preview",
-		"format": "biome format --write .",
-		"lint": "biome lint .",
-		"check": "biome check --apply"
-	},
-	"dependencies": {
-		"framer-motion": "^10.16.0",
-		"i18next": "^23.0.0",
-		"lucide-react": "^0.263.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-i18next": "^13.0.0",
-		"react-router-dom": "^6.8.0",
-		"recharts": "^2.8.0",
-		"zustand": "^4.4.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.3.8",
-		"@types/react": "^18.2.0",
-		"@types/react-dom": "^18.2.0",
-		"@typescript-eslint/eslint-plugin": "^6.0.0",
-		"@typescript-eslint/parser": "^6.0.0",
-		"@vitejs/plugin-react": "^4.1.0",
-		"autoprefixer": "^10.4.0",
-		"eslint": "^8.45.0",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.3",
-		"postcss": "^8.4.0",
-		"tailwindcss": "^3.3.0",
-		"typescript": "^5.2.0",
-		"vite": "^4.4.0"
-	}
+  "name": "erp-robusto",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "format": "biome format --write .",
+    "lint": "biome lint .",
+    "check": "biome check --apply"
+  },
+  "dependencies": {
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.0",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.263.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.0",
+    "react-router-dom": "^6.8.0",
+    "recharts": "^2.8.0",
+    "yup": "^1.3.2",
+    "zustand": "^4.4.0",
+    "three": "^0.160.0",
+    "@react-three/fiber": "^8.15.12",
+    "@react-three/drei": "^9.96.1",
+    "@react-oauth/google": "^0.12.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.8",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/yup": "^0.32.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.0",
+    "vite": "^4.4.0",
+    "@types/three": "^0.160.0"
+  }
 }
